Fix z-index

--- a/src/scss/components/_404-section.scss
+++ b/src/scss/components/_404-section.scss
@@ -3,6 +3,7 @@
     overflow: hidden;
 
     &-content {
+        position: relative;
         min-height: calc(100vh - var(--main-nav-height));
 
         display: flex;
@@ -10,6 +11,8 @@
         align-items: center;
 
         padding-top: 40px;
+        z-index: 10;
+
         @include media-breakpoint-up(xxl) {
             padding-top: 80px;
         }
@@ -57,11 +60,6 @@
             a.btn {
                 flex: 1;
             }
-        }
-
-        .text-wrapper,
-        .buttons-wrapper {
-            z-index: 10;
         }
     }
 
